fix back button alignment

--- a/jsapp/scss/components/_kobo.form-view.scss
+++ b/jsapp/scss/components/_kobo.form-view.scss
@@ -443,7 +443,7 @@
   min-height: 32px;
 
   > i {
-    vertical-align: top;
+    vertical-align: -0.34375em;
   }
 }
 
